--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,26 @@
- <div class="container  mt-5">
+<div class="container">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="navbar-brand" >MoviesApp</div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/movies">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/tvs">TVS</a>
+          </li>
+          
+         
+        </ul>
+      </div>
+    </nav>
+</div>
+
+<div class="container  mt-5">
     <h1>Welcome To  {{title}}</h1> 
    
  </div> 
- <app-movieslist></app-movieslist>
+ <router-outlet></router-outlet>
