--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/tvs">TVS</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/addMovie">Add Movie</a>
+          </li>
           
          
         </ul>
